--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.15.0",
     "react-native-unimodules": "~0.12.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
