--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.7",
+    "@react-native-community/datetimepicker": "^3.4.6",
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/material-bottom-tabs": "^5.3.14",
     "@react-navigation/native": "^5.9.3",
@@ -23,6 +24,7 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-maps": "^0.28.0",
     "react-native-normalize": "^1.0.1",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "~1.13.0",
